# GTestSimple

./: CMakeLists.txt  README.md  function_need_to_test.cpp  function_need_to_test.h  test.cpp
